# openfoam-case-generator

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
of13_factory/: __init__.py  builder.py  geometry.py  mesh_config.py  physics_config.py
of13_factory/templates/: blockMeshDict.py  controlDict.py  decomposeParDict.py  fields.py  fvSchemes.py  fvSolution.py  snappyHexMeshDict.py
sample_code/: of13_factory.py  of13_usage.py
tests/: test_geometry.py
